# sdltest-cmake

./: CMakeLists.txt  README.md  assets.c  common.h  cproto.h  events.c  gamestate.h  globals.c  init.c  keyboard.c  levels.c  main.c  video.c  window.c
